[project]
name = "my-services"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandra",email = "126861307+Kobatoha@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.12.15,<4.0.0)",
    "selenium (>=4.35.0,<5.0.0)",
    "playwright (>=1.55.0,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "redis (>=6.4.0,<7.0.0)",
    "aiogram (>=3.22.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
